--- a/src/main/resources/Mail_en_US.properties
+++ b/src/main/resources/Mail_en_US.properties
@@ -15,4 +15,4 @@ np.msg=Dear {0};\n\nYour login information is as below.\n\nYour username: {1}\nY
 confirmation.subject=Confirmation
 confirmation.msg=Dear {0};\n\nYour login information is as below.\n\nYour username: {1}\nYour password: {2}\n\nPlease follow below link to confirm your account.\n{3}\n\nThanks.
 feedback.subject=You have a message
-feedback.msg=Name: {0}\\nE-mail Address: {1}\\nPhone Number: {2}\\n\\n{3}
+feedback.msg=Name: {0}\nE-mail Address: {1}\n\n{2}
