--- a/src/main/resources/Mail_tr_TR.properties
+++ b/src/main/resources/Mail_tr_TR.properties
@@ -15,4 +15,4 @@ np.msg=Say\u0131n {0};\n\nGiri\u015f bilgileriniz a\u015fa\u011f\u0131daki gibid
 confirmation.subject=Do\u011frulama
 confirmation.msg=Say\u0131n {0};\n\nGiri\u015f bilgileriniz a\u015fa\u011f\u0131daki gibidir.\n\nKullan\u0131c\u0131 ad\u0131n\u0131z: {1}\nParolan\u0131z: {2}\n\nHesab\u0131n\u0131z\u0131 onaylaman\u0131z i\u00e7in l\u00fctfen a\u015fa\u011f\u0131daki ba\u011flant\u0131y\u0131 izleyiniz.\n{3}\n\nTe\u015fekk\u00fcrler.
 feedback.subject=Mesaj\u0131n\u0131z var
-feedback.msg=Ad Soyad: {0}\nE-posta Adresi: {1}\nTelefon Numaras\u0131: {2}\n\n{3}
+feedback.msg=Ad Soyad: {0}\nE-posta Adresi: {1}\n\n{2}
