--- a/src/main/resources/Resources_en_US.properties
+++ b/src/main/resources/Resources_en_US.properties
@@ -306,6 +306,7 @@ Updated=Updated
 Cancelled=Cancelled
 Edited=Edited
 Deleted=Deleted
+Replied=Replied
 Created=Created
 Completed=Completed
 Unselected=Unselected
