--- a/src/main/resources/Resources_tr_TR.properties
+++ b/src/main/resources/Resources_tr_TR.properties
@@ -306,6 +306,7 @@ Updated=G\u00fcncellendi
 Cancelled=\u0130ptal Edildi
 Edited=D\u00fczenlendi
 Deleted=Silindi
+Replied=Cevapland\u0131
 Created=Olu\u015fturuldu
 Completed=Tamamland\u0131
 Unselected=Se\u00e7im iptal edildi
