--- a/src/main/resources/Resources_tr_TR.properties
+++ b/src/main/resources/Resources_tr_TR.properties
@@ -394,3 +394,4 @@ My\ Tickets=Mesajlar\u0131m
 Ticket\ Type=Mesaj Tipi
 Trailer=Tan\u0131t\u0131m Videosu
 User\ Management=Kullan\u0131c\u0131 Y\u00f6netimi
+Reply=Cevapla
