--- a/src/main/resources/Resources_en_US.properties
+++ b/src/main/resources/Resources_en_US.properties
@@ -5,8 +5,7 @@ Select\ Language=Select Language
 Contact=Contact
 Previous=Previous
 Next=Next
-My\ Profile=My Profile
-My\ Account=My Account
+Account=Account
 Username=Username
 Password=Password
 Submit=Submit
@@ -131,7 +130,7 @@ Barcode=Barcode
 Fax\ Number=Fax Number
 Your\ Phone\ Number=Your Phone Number
 Your\ Password=Your Password
-Remind\ my\ password=Remind my password
+Remind\ Password=Remind Password
 Forgot\ your\ password?=Forgot your password?
 Total\ Price=Total Price
 Welcome=Welcome
@@ -140,10 +139,7 @@ Authentication\ failed=Authentication failed
 Please\ try\ again=Please try again
 Order\ No=Order No
 Postal\ Addresses=Postal Addresses
-My\ Personal\ Information=My Personal Information
-My\ Postal\ Addresses=My Postal Addresses
-My\ Shopping\ Basket=My Shopping Basket
-My\ Orders=My Orders
+Personal\ Information=Personal Information
 Tagline=Tagline
 Logo=Logo
 Approval\ Status=Approval Status
@@ -189,7 +185,7 @@ Click\ here\ to\ continue\ shopping=Click here to continue shopping
 Your\ shopping\ basket\ is\ empty=Your shopping basket is empty
 Change\ your\ login\ information=Change your login information
 Change\ your\ personal\ information=Change your personal information
-My\ Login\ Information=My Login Information
+Login\ Information=Login Information
 Logout\ failed=Logout failed
 Member=Member
 Members=Members
@@ -205,7 +201,7 @@ City=City
 B2C=B2C
 B2B=B2B
 Locale=Locale
-My\ Personal\ Settings=My Personal Settings
+Personal\ Settings=Personal Settings
 Models=Models
 Compatible\ Models=Compatible Models
 Track\ your\ order=Track your order
@@ -390,7 +386,7 @@ Order\ information\ is\ sent\ to\ your\ email\ address=Order information is sent
 Refresh=Refresh
 Company=Company
 Company\ Profile=Company Profile
-My\ Tickets=My Tickets
+Tickets=Tickets
 Ticket\ Type=Ticket Type
 Trailer=Trailer
 User\ Management=User Management
