--- a/src/main/resources/Resources_tr_TR.properties
+++ b/src/main/resources/Resources_tr_TR.properties
@@ -5,8 +5,7 @@ Select\ Language=Dil se\u00e7imi
 Contact=\u0130leti\u015fim
 Previous=\u00d6nceki
 Next=Sonraki
-My\ Profile=Profilim
-My\ Account=Hesab\u0131m
+Account=Hesap
 Username=Kullan\u0131c\u0131 ad\u0131
 Password=Parola
 Submit=G\u00f6nder
@@ -131,7 +130,7 @@ Barcode=Barkod
 Fax\ Number=Faks Numaras\u0131
 Your\ Phone\ Number=Telefon Numaran\u0131z
 Your\ Password=Parolan\u0131z
-Remind\ my\ password=Parolam\u0131 hat\u0131rlat
+Remind\ Password=Parolay\u0131 Hat\u0131rlat
 Forgot\ your\ password?=Parolan\u0131z\u0131 m\u0131 unuttunuz?
 Total\ Price=Toplam Fiyat
 Welcome=Ho\u015fgeldiniz
@@ -140,10 +139,7 @@ Authentication\ failed=Kimlik do\u011frulama ba\u015far\u0131s\u0131z oldu
 Please\ try\ again=L\u00fctfen yeniden deneyin
 Order\ No=Sipari\u015f Numaras\u0131
 Postal\ Addresses=Posta Adresleri
-My\ Personal\ Information=Ki\u015fisel Bilgilerim
-My\ Postal\ Addresses=Posta Adreslerim
-My\ Shopping\ Basket=Al\u0131\u015fveri\u015f Sepetim
-My\ Orders=Sipari\u015flerim
+Personal\ Information=Ki\u015fisel Bilgiler
 Tagline=Slogan
 Logo=Logo
 Approval\ Status=Onay Durumu
@@ -189,7 +185,7 @@ Click\ here\ to\ continue\ shopping=Al\u0131\u015fveri\u015fe devam etmek i\u00e
 Your\ shopping\ basket\ is\ empty=Al\u0131\u015fveri\u015f sepetiniz bo\u015f
 Change\ your\ login\ information=Giri\u015f bilgilerinizi de\u011fi\u015ftirin
 Change\ your\ personal\ information=Ki\u015fisel bilgilerinizi de\u011fi\u015ftirin
-My\ Login\ Information=Giri\u015f Bilgilerim
+Login\ Information=Giri\u015f Bilgileri
 Logout\ failed=\u00c7\u0131k\u0131\u015f ba\u015far\u0131s\u0131z oldu
 Member=\u00dcye
 Members=\u00dcyeler
@@ -205,7 +201,7 @@ City=\u0130l
 B2C=B2C
 B2B=B2B
 Locale=Yerel
-My\ Personal\ Settings=Ki\u015fisel Ayarlar\u0131m
+Personal\ Settings=Ki\u015fisel Ayarlar
 Models=Modeller
 Compatible\ Models=Uyumlu Modeller
 Track\ your\ order=Sipari\u015finizi takip edin
@@ -390,7 +386,7 @@ Order\ information\ is\ sent\ to\ your\ email\ address=Sipari\u015f bilginiz e-p
 Refresh=Yenile
 Company=\u015eirket
 Company\ Profile=\u015eirket Profili
-My\ Tickets=Mesajlar\u0131m
+Tickets=Mesajlar
 Ticket\ Type=Mesaj Tipi
 Trailer=Tan\u0131t\u0131m Videosu
 User\ Management=Kullan\u0131c\u0131 Y\u00f6netimi
