--- a/src/main/resources/Resources_en_US.properties
+++ b/src/main/resources/Resources_en_US.properties
@@ -139,7 +139,7 @@ Authentication\ failed=Authentication failed
 Please\ try\ again=Please try again
 Order\ No=Order No
 Postal\ Addresses=Postal Addresses
-Personal\ Information=Personal Information
+Membership\ Information=Membership Information
 Tagline=Tagline
 Logo=Logo
 Approval\ Status=Approval Status
@@ -184,8 +184,8 @@ To\ continue\ your\ transaction\ you\ must\ login.=To continue your transaction 
 Click\ here\ to\ continue\ shopping=Click here to continue shopping
 Your\ shopping\ basket\ is\ empty=Your shopping basket is empty
 Change\ your\ login\ information=Change your login information
-Change\ your\ personal\ information=Change your personal information
-Login\ Information=Login Information
+Change\ your\ membership\ information=Change your membership information
+Change\ Password=Change Password
 Logout\ failed=Logout failed
 Member=Member
 Members=Members
@@ -391,3 +391,9 @@ Ticket\ Type=Ticket Type
 Trailer=Trailer
 User\ Management=User Management
 Reply=Reply
+Messages=Messages
+I\ want\ to\ be\ informed\ about\ the\ campaign\ and\ products=I want to be informed about the campaign and products
+Current\ Password=Current Password
+New\ Password=New Password
+New\ Password\ (Again)=New Password (Again)
+Your\ current\ password\ is\ wrong=Your current password is wrong
