--- a/src/main/resources/Resources_tr_TR.properties
+++ b/src/main/resources/Resources_tr_TR.properties
@@ -139,7 +139,7 @@ Authentication\ failed=Kimlik do\u011frulama ba\u015far\u0131s\u0131z oldu
 Please\ try\ again=L\u00fctfen yeniden deneyin
 Order\ No=Sipari\u015f Numaras\u0131
 Postal\ Addresses=Posta Adresleri
-Personal\ Information=Ki\u015fisel Bilgiler
+Membership\ Information=\u00dcyelik Bilgileri
 Tagline=Slogan
 Logo=Logo
 Approval\ Status=Onay Durumu
@@ -184,8 +184,8 @@ To\ continue\ your\ transaction\ you\ must\ login.=\u0130\u015fleminize devam et
 Click\ here\ to\ continue\ shopping=Al\u0131\u015fveri\u015fe devam etmek i\u00e7in t\u0131klay\u0131n
 Your\ shopping\ basket\ is\ empty=Al\u0131\u015fveri\u015f sepetiniz bo\u015f
 Change\ your\ login\ information=Giri\u015f bilgilerinizi de\u011fi\u015ftirin
-Change\ your\ personal\ information=Ki\u015fisel bilgilerinizi de\u011fi\u015ftirin
-Login\ Information=Giri\u015f Bilgileri
+Change\ your\ membership\ information=\u00dcyelik bilgilerinizi de\u011fi\u015ftirin
+Change\ Password=\u015eifre De\u011fi\u015ftirme
 Logout\ failed=\u00c7\u0131k\u0131\u015f ba\u015far\u0131s\u0131z oldu
 Member=\u00dcye
 Members=\u00dcyeler
@@ -391,3 +391,9 @@ Ticket\ Type=Mesaj Tipi
 Trailer=Tan\u0131t\u0131m Videosu
 User\ Management=Kullan\u0131c\u0131 Y\u00f6netimi
 Reply=Cevapla
+Messages=Mesajlar
+I\ want\ to\ be\ informed\ about\ the\ campaign\ and\ products=Kampanya ve \u00fcr\u00fcnler hakk\u0131nda bilgilendirilmek istiyorum
+Current\ Password=Mevcut Parola
+New\ Password=Yeni Parola
+New\ Password\ (Again)=Yeni Parola (Tekrar)
+Your\ current\ password\ is\ wrong=Mevcut parolan\u0131z hatal\u0131
