--- a/src/main/resources/Resources_en_US.properties
+++ b/src/main/resources/Resources_en_US.properties
@@ -397,3 +397,5 @@ Current\ Password=Current Password
 New\ Password=New Password
 New\ Password\ (Again)=New Password (Again)
 Your\ current\ password\ is\ wrong=Your current password is wrong
+Opt-in\ emailing=Opt-in emailing
+Add\ a\ note=Add a note
