--- a/src/main/resources/Resources_tr_TR.properties
+++ b/src/main/resources/Resources_tr_TR.properties
@@ -397,3 +397,5 @@ Current\ Password=Mevcut Parola
 New\ Password=Yeni Parola
 New\ Password\ (Again)=Yeni Parola (Tekrar)
 Your\ current\ password\ is\ wrong=Mevcut parolan\u0131z hatal\u0131
+Opt-in\ emailing=\u0130ste\u011fe ba\u011fl\u0131 e-posta g\u00f6nderimi
+Add\ a\ note=Not ekle
