--- a/src/main/resources/Resources_en_US.properties
+++ b/src/main/resources/Resources_en_US.properties
@@ -394,3 +394,5 @@ New\ Password\ (Again)=New Password (Again)
 Your\ current\ password\ is\ wrong=Your current password is wrong
 Opt-in\ emailing=Opt-in emailing
 Add\ a\ note=Add a note
+Posts=Posts
+Post=Post
