--- a/src/main/resources/Resources_tr_TR.properties
+++ b/src/main/resources/Resources_tr_TR.properties
@@ -394,3 +394,5 @@ New\ Password\ (Again)=Yeni Parola (Tekrar)
 Your\ current\ password\ is\ wrong=Mevcut parolan\u0131z hatal\u0131
 Opt-in\ emailing=\u0130ste\u011fe ba\u011fl\u0131 e-posta g\u00f6nderimi
 Add\ a\ note=Not ekle
+Posts=Yaz\u0131lar
+Post=Yaz\u0131
