--- a/src/main/resources/Resources_en_US.properties
+++ b/src/main/resources/Resources_en_US.properties
@@ -396,3 +396,6 @@ Opt-in\ emailing=Opt-in emailing
 Add\ a\ note=Add a note
 Posts=Posts
 Post=Post
+Banners=Banners
+Banner=Banner
+Headline=Headline
