--- a/src/main/resources/Resources_tr_TR.properties
+++ b/src/main/resources/Resources_tr_TR.properties
@@ -396,3 +396,6 @@ Opt-in\ emailing=\u0130ste\u011fe ba\u011fl\u0131 e-posta g\u00f6nderimi
 Add\ a\ note=Not ekle
 Posts=Yaz\u0131lar
 Post=Yaz\u0131
+Banners=Banners
+Banner=Banner
+Headline=Ba\u015fl\u0131k
