--- a/src/main/resources/Resources_en_US.properties
+++ b/src/main/resources/Resources_en_US.properties
@@ -259,7 +259,6 @@ COMPLETE=Complete
 REVERSED=Reversed
 REFUND=Refund
 Payment_On_Delivery=Payment On Delivery
-PayPal=PayPal
 SERVICE_PROVIDER=Service Provider
 CCVISAMC=Credit Card
 BKM=BKM
@@ -320,7 +319,7 @@ Bad\ request.\ Unknown\ record.=Bad request. Unknown record.
 Your\ login\ information\ has\ been\ sent\ to\ {0}=Your login information has been sent to {0}
 User\ is\ not\ exist=User is not exist
 User\ is\ already\ signed\ up=User is already signed up
-Order\ information\ has\ been\ sent\ to\ {0}=Order information has been sent to {0}
+Order\ information\ is\ sent\ to\ {0}=Order information is sent to {0}
 Added\ to\ shopping\ basket=Added to shopping basket
 Removed=Removed
 Please\ check\ your\ e-mail\ address\ to\ confirm\ your\ subscription=Please check your e-mail address to confirm your subscription
