--- a/src/main/resources/Resources_tr_TR.properties
+++ b/src/main/resources/Resources_tr_TR.properties
@@ -259,7 +259,6 @@ COMPLETE=Tamamlanan sipari\u015f (provizyon verilmi\u015f/teslim edilmi\u015f)
 REVERSED=\u0130ptal edilen sipari\u015f
 REFUND=\u00d6demesi iade edilen sipari\u015f (iade edilen \u00f6deme)
 Payment_On_Delivery=Kap\u0131da \u00d6deme
-PayPal=PayPal
 SERVICE_PROVIDER=Hizmet Sa\u011flay\u0131c\u0131
 CCVISAMC=Kredi Kart\u0131
 BKM=BKM
@@ -320,7 +319,7 @@ Bad\ request.\ Unknown\ record.=Ge\u00e7ersiz istek. Bilinmeyen bir kay\u0131t.
 Your\ login\ information\ has\ been\ sent\ to\ {0}=Giri\u015f bilgileriniz {0} adresine g\u00f6nderildi
 User\ is\ not\ exist=Kullan\u0131c\u0131 mevcut de\u011fil
 User\ is\ already\ signed\ up=Kay\u0131tl\u0131 bir kullan\u0131c\u0131
-Order\ information\ has\ been\ sent\ to\ {0}=Sipari\u015f bilgileri {0} adresine g\u00f6nderildi
+Order\ information\ is\ sent\ to\ {0}=Sipari\u015f bilgileri {0} adresine g\u00f6nderildi
 Added\ to\ shopping\ basket=Al\u0131\u015fveri\u015f sepetine eklendi
 Removed=\u00c7\u0131kart\u0131ld\u0131
 Please\ check\ your\ e-mail\ address\ to\ confirm\ your\ subscription=Aboneli\u011finizin onaylanmas\u0131 i\u00e7in l\u00fctfen e-posta adresinizi kontrol ediniz
