--- a/src/main/resources/Resources_en_US.properties
+++ b/src/main/resources/Resources_en_US.properties
@@ -399,3 +399,6 @@ Showcase=Showcase
 Content\ Type=Content Type
 Size=Size
 My\ Account=My Account
+Sales\ Revenue=Sales Revenue
+Sales\ Volume=Sales Volume
+No\ data=No data
