--- a/src/main/resources/Resources_tr_TR.properties
+++ b/src/main/resources/Resources_tr_TR.properties
@@ -399,3 +399,6 @@ Showcase=Vitrin
 Content\ Type=\u0130\u00e7erik T\u00fcr\u00fc
 Size=Boyut
 My\ Account=Hesab\u0131m
+Sales\ Revenue=Sat\u0131\u015f Geliri
+Sales\ Volume=Sat\u0131\u015f Hacmi
+No\ data=Veri yok
